<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_background">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/panel_background"
        app:title="@string/title_project_list"
        app:titleTextColor="@color/text_primary"
        app:navigationIcon="@drawable/ic_back" />

    <EditText
        android:id="@+id/etSearchProjects"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_search_projects"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_hint"
        android:backgroundTint="@color/accent_dark"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:layout_margin="@dimen/margin_medium"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Spinner
        android:id="@+id/spinnerSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_small"
        android:popupBackground="@color/panel_background"
        android:entries="@array/sort_options" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProjectList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:padding="@dimen/padding_small" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabNewProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin_medium"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/btn_new_project"
        app:backgroundTint="@color/accent_dark"
        app:tint="@android:color/white" />

</LinearLayout>
